# llama2.rs

./: Cargo.toml  README.md  index.html
pkg/: llama2_rs.d.ts  llama2_rs.js  llama2_rs_bg.wasm  llama2_rs_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
