[package]
name = "llama2_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"  # Linear algebra operations
memmap2 = "0.7"   # Safe memory mapping
rand = "0.8"  
thiserror = "1.0" # Error handling utilities
rayon = "1.8"
rand_chacha = "0.3"
byteorder = "1.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "WebGl2RenderingContext"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Testing utilities
approx = "0.5"    

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-feature=+simd128"]
